tests/errors/parse-recover-multiple/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0026]: Unexpected token (keyword `alias`). Expected an identifier.
  │
3 │ def alias = 0
  │     ^^^^^
  ╰─𜱶 tests/errors/parse-recover-multiple/main.pa:3:5

error[E0026]: Unexpected token (keyword `trait`). Expected an identifier.
  │
5 │ def trait = 2
  │     ^^^^^
  ╰─𜱶 tests/errors/parse-recover-multiple/main.pa:5:5

error[E0026]: Unexpected token (a '='). Expected a '}'.
  │
  ├─𜱶 help: record fields are separated with `:`, not `=` (e.g. `{ name: value }`).
  │
6 │ def other = { a = 3 }
  │                 ^
  ╰─𜱶 tests/errors/parse-recover-multiple/main.pa:6:17
